--- a/.github/workflows/generate_bpmn_png.yml
+++ b/.github/workflows/generate_bpmn_png.yml
@@ -1,4 +1,4 @@
-name: Generate BPMN PNG and Update README
+name: Generate BPMN SVG and Update README
 
 on:
   push:
@@ -9,7 +9,7 @@ on:
       - main
 
 jobs:
-  generate-png:
+  generate-svg:
     runs-on: ubuntu-latest
 
     steps:
@@ -17,11 +17,6 @@ jobs:
       uses: actions/checkout@v3
       with:
         persist-credentials: false  # Voorkomt dat GITHUB_TOKEN automatisch wordt gebruikt voor pushes
-
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '18'
 
     - name: Find BPMN file path in README
       id: find_bpmn
@@ -34,7 +29,7 @@ jobs:
           exit 1
         fi
 
-    - name: Generate PNG from BPMN via Kroki
+    - name: Generate SVG from BPMN via Kroki
       env:
         BPMN_PATH: ${{ steps.find_bpmn.outputs.bpmn_path }}
       run: |
@@ -44,45 +39,47 @@ jobs:
           exit 1
         fi
 
-        # Gebruik de Kroki API om het BPMN-diagram om te zetten naar PNG
+        # Gebruik de Kroki API om het BPMN-diagram om te zetten naar SVG
         curl -X POST \
           -H "Content-Type: text/plain" \
           --data-binary "@$BPMN_PATH" \
-          https://kroki.io/bpmn/png \
-          --output diagram.png
+          https://kroki.io/bpmn/svg \
+          --output diagram.svg
 
-        # Controleer of de PNG correct is gegenereerd
-        if [ ! -f diagram.png ]; then
-          echo "Fout bij het genereren van diagram.png via Kroki."
+        # Controleer of de SVG correct is gegenereerd
+        if [ ! -f diagram.svg ]; then
+          echo "Fout bij het genereren van diagram.svg via Kroki."
           exit 1
         fi
 
-    - name: Update README with PNG
+    - name: Update README with SVG
       run: |
-        # Definieer het pad naar de afbeelding, bijvoorbeeld 'images/diagram.png'
-        IMAGE_PATH="images/diagram.png"
+        # Definieer het pad naar de afbeelding, bijvoorbeeld 'images/diagram.svg'
+        IMAGE_PATH="images/diagram.svg"
 
         # Maak de images directory als deze nog niet bestaat
         mkdir -p images
 
-        # Verplaats de gegenereerde PNG naar de images directory
-        mv diagram.png "$IMAGE_PATH"
+        # Verplaats de gegenereerde SVG naar de images directory
+        mv diagram.svg "$IMAGE_PATH"
 
         # Controleer of de sectie "## BPMN Diagram" al bestaat
         if grep -q "## BPMN Diagram" README.md; then
           # Verwijder alles na "## BPMN Diagram" om de afbeelding te vervangen
-          sed -i '/## BPMN Diagram/q' README.md
+          # Gebruik awk om de sectie bij te werken
+          awk '/## BPMN Diagram/ {print; print ""; print "![BPMN Diagram]('"$IMAGE_PATH"')"; exit} {print}' README.md > README_temp.md
+          mv README_temp.md README.md
+        else
+          # Voeg de "## BPMN Diagram" sectie toe met de SVG afbeelding
+          echo -e "\n## BPMN Diagram\n\n![BPMN Diagram]($IMAGE_PATH)" >> README.md
         fi
-
-        # Voeg de "## BPMN Diagram" sectie toe met de PNG afbeelding
-        echo -e "\n## BPMN Diagram\n\n![BPMN Diagram]($IMAGE_PATH)" >> README.md
 
     - name: Commit changes
       run: |
         git config --local user.name "github-actions[bot]"
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
-        git add images/diagram.png README.md
-        git commit -m "Generate BPMN diagram PNG and update README [skip ci]" || echo "Geen wijzigingen om te committen"
+        git add images/diagram.svg README.md
+        git commit -m "Generate BPMN diagram SVG and update README [skip ci]" || echo "Geen wijzigingen om te committen"
 
     - name: Push changes
       uses: ad-m/github-push-action@v0.6.0
