--- a/.github/workflows/generate-bpmn-svgs.yml
+++ b/.github/workflows/generate-bpmn-svgs.yml
@@ -98,14 +98,9 @@ jobs:
         run: |
           git config --local user.name "github-actions[bot]"
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git add svg-files/ processed.txt bpmn-files-processed/
+          git commit -m "Generate BPMN SVGs and update processed files [skip ci]" || echo "Geen wijzigingen om te committen"
 
-          # Check if there are any changes to commit
-          if git diff --quiet; then
-            echo "No changes to commit."
-          else
-            git add svg-files/ processed.txt bpmn-files-processed/
-            git commit -m "Generate BPMN SVGs and update processed files [skip ci]"
-            
       - name: Push changes
         uses: ad-m/github-push-action@v0.6.0
         with:
