--- a/.github/workflows/generate-bpmn-svgs.yml
+++ b/.github/workflows/generate-bpmn-svgs.yml
@@ -16,11 +16,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
-          persist-credentials: false # Prevents automatic use of GITHUB_TOKEN for pushes
+          persist-credentials: false
 
       - name: Set up environment
         run: |
-          # Create necessary directories if they don't exist
           mkdir -p bpmn-files-processed
           mkdir -p svg-files
 
@@ -39,18 +38,13 @@ jobs:
       - name: Find unprocessed BPMN files
         id: find_unprocessed
         run: |
-          # List all BPMN files in bpmn-files/
           ALL_BPMN_FILES=$(find bpmn-files -type f -name "*.bpmn")
 
-          # Read processed files from the output
           PROCESSED_FILES="${{ steps.get_processed.outputs.processed_files }}"
 
-          # Initialize an empty variable for unprocessed files
           UNPROCESSED_FILES=""
 
-          # Iterate over all BPMN files and check if they are processed
           for file in $ALL_BPMN_FILES; do
-            # Extract relative path
             REL_PATH="$file"
             if [[ ! " $PROCESSED_FILES " =~ " $REL_PATH " ]]; then
               UNPROCESSED_FILES+="$file "
@@ -67,17 +61,14 @@ jobs:
           for BPMN_FILE in ${{ steps.find_unprocessed.outputs.unprocessed_files }}; do
             echo "Processing $BPMN_FILE"
 
-            # Define the SVG file path
             SVG_FILE="svg-files/$(basename "${BPMN_FILE%.bpmn}.svg")"
             
-            # Convert BPMN to SVG using Kroki API
             curl -X POST \
               -H "Content-Type: text/plain" \
               --data-binary "@$BPMN_FILE" \
               https://kroki.io/bpmn/svg \
               --output "$SVG_FILE"
             
-            # Check if SVG was generated successfully
             if [ ! -f "$SVG_FILE" ]; then
               echo "Error: Failed to generate SVG for $BPMN_FILE"
               exit 1
@@ -85,10 +76,8 @@ jobs:
             
             echo "Successfully generated $SVG_FILE"
             
-            # Append the processed BPMN file to processed.txt
             echo "$BPMN_FILE" >> processed.txt
             
-            # Move the BPMN file to bpmn-files-processed/
             mv "$BPMN_FILE" bpmn-files-processed/
           done
 
